--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/teoriaDif.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/teoriaDif.html
@@ -5,7 +5,7 @@ Teoría de Diferencias Finitas
 {% endblock %}
 
 {% block content %}
-  <div class="fade-in">
+  <div class="fade-in text-center">
     <h1>Teoría de Diferencias Finitas</h1>
     <hr>
     <div>
