--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/calcular_biseccion.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/calcular_biseccion.html
@@ -12,63 +12,88 @@
             <button type="submit" class="btn btn-primary">Calcular</button>
             {% if user.is_authenticated %}
             <a href="{% url 'biseccion_history' %}" class="btn btn-outline-secondary ms-2">Ver Historial</a>
+            {% else %}
+                <p>Para ver más detalles, por favor <a href="{% url 'registro' %}" class="btn btn-link text-bg-primary text-wrap">inicia sesión</a>.</p>
             {% endif %}
         </form>
 
         {% if mensaje %}
-        <div class="alert alert-info mt-3" role="alert">
-            {{ mensaje }}
-        </div>
+            <div class="alert alert-info mt-3" role="alert">
+                {{ mensaje }}
+            </div>
         {% endif %}
 
         {% if resultado_biseccion %}
-        <div class="mt-4">
-            <h2>Resultados de la Bisección:</h2>
-            <ul class="list-group mt-3">
-                <li class="list-group-item">Raíz aproximada: {{ resultado_biseccion.0|default:"No calculada" }}</li>
-                <li class="list-group-item">Número de iteraciones: {{ resultado_biseccion.1|default:"No calculado" }}</li>
-                <li class="list-group-item">Error: {{ resultado_biseccion.2|default:"No calculado" }}</li>
-            </ul>
+            {% if user.is_authenticated %}
+                <div class="mt-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Raíz aproximada</h5>
+                            <p class="card-text">{{ resultado_biseccion.0|default:"No calculada" }}</p>
+                        </div>
+                    </div>
 
-            {% if not request.user.is_authenticated %}
-            <p>Para ver más detalles, por favor <a href="{% url 'registro' %}" class="btn btn-link text-bg-primary text-wrap">inicia sesión</a>.</p>
-            {% else %}
-            {% if resultado_biseccion.3 %}
-            <div class="mt-4">
-                <h3>Iteraciones:</h3>
-                <div class="table-responsive">
-                    <table class="table table-bordered mt-3">
-                        <thead class="table-light">
-                            <tr>
-                                <th scope="col" style="text-align: center;">Iteración</th>
-                                <th scope="col" style="text-align: center;">f(Raíz)</th>
-                                <th scope="col" style="text-align: center;">Raíz Aproximada</th>
-                                <th scope="col" style="text-align: center;">Error %</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for iteracion in resultado_biseccion.3 %}
-                            <tr>
-                                <td style="text-align: center;">{{ iteracion.0 }}</td>
-                                <td style="text-align: center;">{{ iteracion.1 }}</td>
-                                <td style="text-align: center;">{{ iteracion.2 }}</td>
-                                <td style="text-align: center;">{{ iteracion.3 }}</td>
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Número de iteraciones</h5>
+                            <p class="card-text">{{ resultado_biseccion.1|default:"No calculado" }}</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Error</h5>
+                            <p class="card-text">{{ resultado_biseccion.2|default:"No calculado" }}</p>
+                        </div>
+                    </div>
+
+                    {% if resultado_biseccion.3 %}
+                        <div class="mt-4">
+                            <h3>Iteraciones:</h3>
+                            <div class="card-columns">
+                                {% for iteracion in resultado_biseccion.3 %}
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Iteración {{ iteracion.0 }}</h5>
+                                        <p class="card-text">f(Raíz) = {{ iteracion.1 }}</p>
+                                        <p class="card-text">Raíz Aproximada = {{ iteracion.2 }}</p>
+                                        <p class="card-text">Error % = {{ iteracion.3 }}</p>
+                                    </div>
+                                </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    {% endif %}
+
+                    {% if grafica_base64 %}
+                        <div class="mt-4">
+                            <h2>Gráfica:</h2>
+                            <img src="data:image/png;base64,{{ grafica_base64 }}" alt="Gráfica de la función y raíz encontrada" class="img-fluid mt-3">
+                        </div>
+                    {% endif %}
                 </div>
-            </div>
-            {% endif %}
+            {% else %}
+                <div class="card mt-4">
+                    <div class="card-body">
+                        <h5 class="card-title">Raíz aproximada</h5>
+                        <p class="card-text">{{ resultado_biseccion.0|default:"No calculada" }}</p>
+                    </div>
+                </div>
 
-            {% if grafica_base64 %}
-            <div class="mt-4">
-                <h2>Gráfica:</h2>
-                <img src="data:image/png;base64,{{ grafica_base64 }}" alt="Gráfica de la función y raíz encontrada" class="img-fluid mt-3">
-            </div>
+                <div class="card mt-4">
+                    <div class="card-body">
+                        <h5 class="card-title">Número de iteraciones</h5>
+                        <p class="card-text">{{ resultado_biseccion.1|default:"No calculado" }}</p>
+                    </div>
+                </div>
+
+                <div class="card mt-4">
+                    <div class="card-body">
+                        <h5 class="card-title">Error</h5>
+                        <p class="card-text">{{ resultado_biseccion.2|default:"No calculado" }}</p>
+                    </div>
+                </div>
             {% endif %}
-            {% endif %}
-        </div>
         {% endif %}
     </div>
 </div>
