--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/historial.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/historial.html
@@ -1,7 +1,7 @@
 {% extends "Biseccion/baseDiferencias.html" %}
 
 {% block content %}
-  <h2 class="text-center mb-4">Historial de Diferencias Divididas</h2>
+  <h2 class="text-center mb-4">Historial de Diferenciacion Numerica</h2>
   <div class="table-responsive">
     <table class="table table-striped table-hover">
       <thead>
